# five-three-one

./: .gitignore  Cargo.toml  README.md  training_max.toml
src/: lifts.rs  main.rs  static_strings.rs
tests/: cli_snapshots.rs
tests/fixtures/: deadlift-week2-warmup-mobility-core-seed321.txt  overhead-press-week4-seed7.txt  squat-week1-seed123.txt
