[package]
name = "five-three-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8.4"
serde = { version = "1.0.217", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.1"
toml = "0.8.20"
